<resources>
    <string name="app_name">Parking Control</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registro">Registro</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="parqueos">Parqueos</string>
    <string name="parking_control">Parking Control</string>
    <string name="usuario">Usuario</string>
    <string name="mi_cuenta">Mi Cuenta</string>
    <string name="usuario_mail_com">usuario@mail.com</string>
    <string name="logout">Cerrar Sesion</string>
    <string name="RegistrarParqueo">Registrar parqueo</string>
    <string name="NumMatricula">Nro de Matricula</string>
    <string name="Tiempo">Tiempo</string>
    <string name="Registrar">Registrar</string>
    <string name="Cancelar">Cancelar</string>
    <string name="add">+</string>
    <string name="List">Listar</string>
    <string name="parqueos_title">Parqueos de</string>
    <string name="parqueos_user">User</string>
    <string name="addParqueo">+</string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="registrarse">Registrarse</string>
    <string name="contrasena">Contraseña</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="varela_hernan">Varela Hernán</string>
    <string name="sinnott_segura_gonzalo">Sinnott Segura Gonzalo</string>
    <string name="fernandez_leonardo">Fernandez Leonardo</string>
    <string name="clifton_manuel">Clifton Manuel</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="nombre">Nombre</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repetir_contrase_a">Repetir Contraseña</string>
</resources>