<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home">
        </item>
        <item android:id="@+id/nav_login"
            android:icon="@drawable/ic_baseline_smartphone_24"
            android:title="@string/login">
        </item>
        <item android:id="@+id/nav_registro"
            android:icon="@drawable/ic_baseline_smartphone_24"
            android:title="@string/registro">
        </item>
        <item android:id="@+id/nav_Parqueos"
            android:icon="@drawable/ic_baseline_policy_24"
            android:title="@string/parqueos">
        </item>
        </group>

</menu>